fix: prompt opens on wrong window, title in catalog mode overflows in sidebar

--- a/www/ui/templates/sidebar-entry.css
+++ b/www/ui/templates/sidebar-entry.css
@@ -15,6 +15,7 @@
     }
 
     #sidebar-title {
+        width: 100%;
         font-size: 0.8em;
         align-self: center;
 
